# bxvl

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: bxvl_bench.rs  v3bench.rs
src/: common.rs  constants.rs  consts.rs  errors.rs  lib.rs  main.rs  measurements.rs  unit_parsing.rs  units.rs  values.rs
src/units/: angle.rs  angle_solid.rs  catalytic_activity.rs  electrical_capacitance.rs  electrical_charge.rs  electrical_conductance.rs  electrical_current.rs  electrical_inductance.rs  electrical_potential.rs  electrical_resistance.rs  energy.rs  force.rs  frequency.rs  illuminance.rs  information.rs  length.rs  luminous_flux.rs  luminous_intensity.rs  magnetic_flux.rs  magnetic_flux_density.rs  mass.rs  metric.rs  mod.rs  power.rs  pressure.rs  radiation_absorbed_dose.rs  radiation_equivalent_dose.rs  radioactivity.rs  sound.rs  substance.rs  temperature.rs  time.rs  unitless.rs  volume.rs
src/units/force/: mod.rs
src/units/length/: mod.rs
src/units/unitless/: mod.rs
src/value/: consts.rs  mod.rs  value_impl.rs  value_std_ops.rs
src/value/arithmetic_ops/: mod.rs  type_f32.rs  type_f64.rs  type_i32.rs  type_i64.rs  type_isize.rs  type_u32.rs  type_u64.rs  type_usize.rs  type_value.rs
src/value/construction/: angle.rs  angle_solid.rs  catalytic_activity.rs  electrical_capacitance.rs  electrical_charge.rs  electrical_conductance.rs  electrical_current.rs  electrical_inductance.rs  electrical_potential.rs  electrical_resistance.rs  energy.rs  force.rs  frequency.rs  illuminance.rs  information.rs  length.rs  luminous_flux.rs  luminous_intensity.rs  magnetic_flux.rs  magnetic_flux_density.rs  mass.rs  mod.rs  power.rs  pressure.rs  radiation_absorbed_dose.rs  radiation_equivalent_dose.rs  (+7 more)
src/values/: value_arithmetic_ops.rs  value_construction_ops.rs  value_consts.rs  value_conversion_ops.rs  value_impl.rs  value_std_ops.rs  value_string.rs
src_old/: common.rs  constants.rs  lib.rs  measurements.rs  units.rs  values.rs
src_old/values/: value_arithmetic_ops.rs  value_consts.rs  value_conversion_ops.rs  value_impl.rs  value_string.rs
tests/: constants.rs  v3_unit_module_testing.rs  v3_value_module_testing.rs  value_integration_tests.rs  value_unit_integration.rs
(+120 files in other folders)
