[package]
name = "v3"
version = "0.1.0"
edition = "2021"
repository = ""
authors = ["Bax"]
readme = "README.md"
license = "GPLv3"
description = """
A datatype library that allows for measurement unit association, conversion, and operations for values.
"""

[lib]
name = "v3"
path = "src/lib.rs"

[dependencies]
serde = "1.0.196"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "v3bench"
harness = false