[package]
name = "bxvl"
version = "0.1.0"
edition = "2021"
repository = "https://gitlab.com/mad_bax/bxvl"
authors = ["Bax <madbax@proton.me>"]
readme = "README.md"
license = "GPLv2.1"
description = """
A datatype library that allows for measurement unit association, conversion, and operations for values.
"""

[lib]
name = "bxvl"
path = "src/lib.rs"

[dependencies]
serde = { version="1.0.209", features=["derive"] }

[dev-dependencies]
criterion = "0.5.1"
toml = "0.8.19"

[[bench]]
name = "bxvl_bench"
harness = false